# coding-agent

./: .gitignore  .gitmodules  .impeccable.md  DESIGN.md  README.md  netlify.toml  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/[id]/: page.tsx
app/avatar/: page.tsx
app/multi-agent-test/: client-page.tsx  page.tsx
apps/site/: index.html  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
components/: app-sidebar.tsx  desktop-update-check.tsx  theme-provider.tsx
components/ai-elements/: conversation.tsx  file-tree.tsx  image.tsx  inline-citation.tsx  message.tsx  (+8 more)
desktop-dist/: index.html  splashscreen.html
docs/: aaa.md  avatar-role-behavior-system.md  background-long-running-command-behavior.md  build-agent-opencode-codex-tools-compare.md  claude-code-tools.md  codex-daytona-alignment-plan.md  context-architecture-comparison.md  rovix-workspace-architecture.md  skills-plugins-architecture.md  submodule-codex-opencode-complete-guide.md  tauri-updater-github.md  对比.md
hooks/: use-agent-stream.ts  use-avatar-director.ts  use-desktop-workspace.ts  use-local-processes.ts  use-thread-session.ts
lib/: context-window.ts  continuation.ts  desktop-workspace.ts  local-process.ts  model-capabilities.ts  model-tuning.ts  stream-event-bus.ts  thread-session.ts  user-behavior-profile.ts  user-behavior-store.ts  workflow-graph.ts
mastra/: index.ts  memory.ts  storage.ts
scripts/: desktop-dev-server.mjs  prepare-sidecar.mjs  release.mjs  sync-version.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
types/: diff.d.ts
(+200 files in other folders)
