[package]
name = "coding-agent-desktop"
version = "0.2.3"
description = "Desktop shell for the Coding Agent app"
authors = ["Coding Agent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "=0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[lib]
name = "coding_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
