[package]
name = "rovix"
version = "0.2.21"
description = "Desktop shell for the Rovix app"
authors = ["Rovix"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "=0.15.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[lib]
name = "rovix"
crate-type = ["staticlib", "cdylib", "rlib"]
